<resources>
    <string name="app_name">TestApp</string>
    <string name="select_document">Select Document</string>
    <string name="aadhaar_front">Aadhaar front</string>
    <string name="aadhaar_back">Aadhaar back</string>
    <string name="voter_front">Voter front</string>
    <string name="voter_back">Voter back</string>
    <string name="driving_license">Driving license</string>
    <string name="pan">Pan</string>
    <string name="passport_front">Passport front</string>
    <string name="passport_back">Passport back</string>
</resources>
